--- a/sway/config
+++ b/sway/config
@@ -5,6 +5,7 @@ set $mod Mod4
 
 # Your preferred terminal emulator
 set $term alacritty
+set $term_float $term --title "terminal-float"
 
 # Your preferred application launcher
 # Note: pass the final command to swaymsg so that the resulting window can be opened
